# Kali-Factory-Instructions

./: .env.example  .gitignore  DEPLOYMENT.md  LICENSE  README.md  START_HERE_FOR_AGENTS.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
runtimes/kali/: Dockerfile  tools.json
scripts/: bootstrap-secrets.sh  install-user-services.sh  start-api.sh  start-mcp.sh  start-worker.sh
src/kali_factory/: __init__.py
src/kali_factory/api/: main.py
src/kali_factory/mcp/: server.py
src/kali_factory/models/: __init__.py  jobs.py
src/kali_factory/policy/: __init__.py  allowlist.py  auth.py
src/kali_factory/worker/: handlers.py  main.py
systemd/: kali-factory-api.service.template  kali-factory-worker.service.template
