[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kali-factory"
version = "0.0.1"
description = "Safer host-local control plane for AI agents to access Kali Linux OSINT tooling — typed jobs, allowlisted tools, bearer auth, MCP."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [{name = "marcmunoz-uno"}]
keywords = ["ai-agents", "mcp", "kali", "osint", "security", "fastapi", "rq"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Distributed Computing",
    "Topic :: Security",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "redis>=5.0",
    "rq>=2.0",
    "docker>=7.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "structlog>=24.0",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.6",
    "mypy>=1.10",
]

[project.scripts]
kali-factory-api = "kali_factory.api.main:run"
kali-factory-worker = "kali_factory.worker.main:run"
kali-factory-mcp = "kali_factory.mcp.server:run"

[project.urls]
Homepage = "https://github.com/marcmunoz-uno/Kali-Factory-Instructions"
Issues = "https://github.com/marcmunoz-uno/Kali-Factory-Instructions/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
strict = false  # pre-alpha, will tighten later
